# restaurantb

./: main.py  pyproject.toml
app/data/: booked_clients.json  clients.json  clients.py  list_files.py  open_files.py  reviews.json  reviews.py
app/forms/: client.py  review.py
app/keyboards/: clients.py  start.py
app/log/: log.py
app/routers/: clients.py  reviews.py  start.py
